--- a/b2d-venture/package.json
+++ b/b2d-venture/package.json
@@ -48,6 +48,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.2.1",
+    "gif-tsx": "^0.1.5",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.439.0",
     "next": "^14.2.8",
