--- a/b2d-venture/package.json
+++ b/b2d-venture/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.4.1",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -56,6 +59,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
     "react-resizable-panels": "^2.1.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
