--- a/b2d-venture/package.json
+++ b/b2d-venture/package.json
@@ -14,7 +14,9 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.4.1",
+    "@clerk/nextjs": "^4.6.18",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -26,6 +28,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
@@ -43,6 +46,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-icons/all-files": "^4.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -50,6 +54,7 @@
     "embla-carousel-react": "^8.2.1",
     "gif-tsx": "^0.1.5",
     "input-otp": "^1.2.4",
+    "lucide": "^0.439.0",
     "lucide-react": "^0.439.0",
     "next": "^14.2.8",
     "next-themes": "^0.3.0",
@@ -57,6 +62,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
     "react-resizable-panels": "^2.1.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
