--- a/b2d-venture/package.json
+++ b/b2d-venture/package.json
@@ -52,18 +52,21 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.2.1",
+    "flowbite-react": "^0.10.1",
     "gif-tsx": "^0.1.5",
     "input-otp": "^1.2.4",
     "lucide": "^0.439.0",
     "lucide-react": "^0.439.0",
     "next": "^14.2.8",
     "next-themes": "^0.3.0",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-resizable-panels": "^2.1.2",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
