--- a/b2d-venture/package.json
+++ b/b2d-venture/package.json
@@ -55,7 +55,8 @@
     "embla-carousel-react": "^8.2.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.439.0",
-    "next": "^14.2.9",
+    "mongodb": "^6.9.0",
+    "next": "^14.2.13",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
