--- a/b2d-venture/package.json
+++ b/b2d-venture/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
+    "@nestjs/mongoose": "^10.0.10",
     "@nextui-org/react": "^2.4.7",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -48,6 +49,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@szhsin/react-menu": "^4.2.2",
+    "body-parser": "^1.20.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -56,6 +58,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.439.0",
     "mongodb": "^6.9.0",
+    "mongoose": "^8.7.0",
     "next": "^14.2.13",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
