--- a/b2d-venture/tsconfig.json
+++ b/b2d-venture/tsconfig.json
@@ -30,7 +30,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-, "app/layout.tsx", "components/shared/Footer.tsx", "components/shared/Header.js", "app/(root)/layout.js", "app/(root)/page.tsx"  ],
+, "app/layout.tsx", "components/shared/Footer.tsx", "components/shared/Header.js", "app/(root)/layout.js", "app/(root)/page.tsx", "app/api/data/page.tsx"  ],
   "exclude": [
     "node_modules"
   ]
