--- a/b2d-venture/package.json
+++ b/b2d-venture/package.json
@@ -67,10 +67,12 @@
     "next": "^14.2.13",
     "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
+    "primereact": "^10.8.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-resizable-panels": "^2.1.2",
     "react-toastify": "^10.0.5",
