--- a/b2d-venture/package.json
+++ b/b2d-venture/package.json
@@ -65,6 +65,7 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "next": "^14.2.13",
+    "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
     "primereact": "^10.8.3",
