--- a/b2d-venture/package.json
+++ b/b2d-venture/package.json
@@ -14,6 +14,7 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.5.3",
     "@clerk/nextjs": "^5.4.1",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
@@ -51,6 +52,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@szhsin/react-menu": "^4.2.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
