Add login form and change schema

--- a/b2d-venture/.env
+++ b/b2d-venture/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=mongodb+srv://Napasornte:TUXtDxMcGM8RmkTI@b2d-venture.nmkg9.mongodb.net/?retryWrites=true&w=majority&appName=B2D-Venture
+NEXTAUTH_SECRET=secret
