Login with credentials are done

--- a/b2d-venture/.env
+++ b/b2d-venture/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=mongodb+srv://Napasornte:TUXtDxMcGM8RmkTI@b2d-venture.nmkg9.mongodb.net/?retryWrites=true&w=majority&appName=B2D-Venture
 NEXTAUTH_SECRET=secret
+NEXTAUTH_URL="YPEHNHOmxtuSo5IXYDIs5l5uP4zuuEMmmlWiqx3VkgE=" # Added by `npx auth`. Read more: https://cli.authjs.dev
