Credentials registration successful

--- a/b2d-venture/.env
+++ b/b2d-venture/.env
@@ -1,5 +1,5 @@
 DATABASE_URL=mongodb+srv://Napasornte:TUXtDxMcGM8RmkTI@b2d-venture.nmkg9.mongodb.net/?retryWrites=true&w=majority&appName=B2D-Venture
-NEXTAUTH_SECRET=secret
-NEXTAUTH_URL="YPEHNHOmxtuSo5IXYDIs5l5uP4zuuEMmmlWiqx3VkgE=" # Added by `npx auth`. Read more: https://cli.authjs.dev
+NEXTAUTH_SECRET=Gtogl3IAW48E4foKPNtiP94IVEIYj066E0g6yKxn6PE=
+NEXTAUTH_URL=http://localhost:3000
 GOOGLE_CLIENT_ID=4331965808-0f76246553gdeag23elkk4iammplpbod.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
