add user id in business

--- a/b2d-venture/package.json
+++ b/b2d-venture/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@google-cloud/storage": "^7.13.0",
     "@hookform/resolvers": "^3.9.0",
     "@nestjs/mongoose": "^10.0.10",
     "@nextui-org/react": "^2.4.7",
@@ -60,12 +61,13 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.2.1",
     "flowbite-react": "^0.10.1",
+    "formidable": "^3.5.1",
     "gif-tsx": "^0.1.5",
     "input-otp": "^1.2.4",
     "lucide": "^0.439.0",
     "lucide-react": "^0.439.0",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.7.0",
+    "mongoose": "^8.7.1",
     "next": "^14.2.13",
     "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
