adjust searchbar and add pargination in admin-business-request-page

--- a/b2d-venture/package.json
+++ b/b2d-venture/package.json
@@ -73,6 +73,7 @@
     "next": "^14.2.13",
     "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.16",
     "papaparse": "^5.4.1",
     "primereact": "^10.8.3",
     "react": "^18.3.1",
