fix dashboard, create raisecampaign and manage raise campaign bug

--- a/b2d-venture/package.json
+++ b/b2d-venture/package.json
@@ -56,6 +56,7 @@
     "@szhsin/react-menu": "^4.2.2",
     "@tiptap/extension-heading": "^2.9.1",
     "@tiptap/extension-image": "^2.9.1",
+    "@tiptap/extension-link": "^2.9.1",
     "@tiptap/extension-text-align": "^2.9.1",
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
