--- a/b2d-venture/package.json
+++ b/b2d-venture/package.json
@@ -61,6 +61,7 @@
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "class-variance-authority": "^0.7.0",
