--- a/b2d-venture/package.json
+++ b/b2d-venture/package.json
@@ -10,6 +10,7 @@
     "@types/react": "18.3.5",
     "@types/react-credit-cards": "^0.8.4",
     "autoprefixer": "^10.4.20",
+    "cypress": "^13.16.0",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
     "typescript": "5.5.4"
