--- a/b2d-venture/package.json
+++ b/b2d-venture/package.json
@@ -3,7 +3,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "devDependencies": {
     "@types/node": "22.5.4",
@@ -11,6 +13,7 @@
     "@types/react-credit-cards": "^0.8.4",
     "autoprefixer": "^10.4.20",
     "cypress": "^13.16.0",
+    "cypress-file-upload": "^5.0.8",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
     "typescript": "5.5.4"
