--- a/b2d-venture/package.json
+++ b/b2d-venture/package.json
@@ -11,6 +11,8 @@
     "@types/react-credit-cards": "^0.8.4",
     "autoprefixer": "^10.4.20",
     "cypress": "^13.16.0",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
     "typescript": "5.5.4"
