--- a/b2d-venture/package.json
+++ b/b2d-venture/package.json
@@ -13,9 +13,9 @@
     "@types/react-credit-cards": "^0.8.4",
     "autoprefixer": "^10.4.20",
     "cypress": "^13.16.0",
+    "cypress-file-upload": "^5.0.8",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
-    "cypress-file-upload": "^5.0.8",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
     "typescript": "5.5.4"
@@ -67,6 +67,7 @@
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
@@ -96,6 +97,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
